Refactored GradleProperties and SettingsGradle to use DynamicFile